solc_ossfuzz_seed_corpus/test_sol/test_c098c40456cd7e8b560cc5be5737e0a497f45539113511c55204fc3b111bff15_e655fdac2fcc53b577b8cfb787c14439c0a5ee79_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  function f0(bool i0,bool i1,bytes memory i2) external returns(bytes7 o0,int16 o1,C0 o2)
  { }
  function f1(int168 i0,bytes20 i1) external returns(bytes memory o0,uint48 o1,address o2)
  { }
}
function f2(bool i0,bytes8 i1) 
{ }
function f3(bool i0,bool i1)  returns(bool o0,bytes12 o1)
{
  {





  }
  i0 = ((292275899395366758535992316 * 41425988987118575291469841) >= 143039532562360047337947469);
  i1 = false;
  {
{

  f2(true,(0xd1b1173842912889 | 0xbef7b1ddcb564f56));

}



  }
}
// ----
// TypeError 9553: (su0.sol:457-498): Invalid type for argument in function call. Invalid implicit conversion from int_const 18444413099593658335 to bytes8 requested.
